// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Gravity shogi > can move 1`] = `
ban:
(1) ab1 
_________1ae1ah1ae1ad1ac1ab
_____________________1ag1af
1ac1aa1aa1aa1aa1aa1aa1aa1aa
________________________1aa
___________________________
________________________0aa
___0aa0aa0aa0aa0aa0aa0aa0aa
_____________________0af0ag
___0ac0ad0ae0ah0ae0ad0ac0ab
(0) ab1 ad1 
kifu:
☗7六歩 [0,[7,6,[],[]],[7,7,[0,"aa"],[0,"aa"]],[1,6,[],[0,"aa"]],[9,7,[0,"aa"],[]]]
☖3四歩 [1,[3,4,[],[]],[3,3,[1,"aa"],[1,"aa"]],[1,4,[],[1,"aa"]],[9,3,[1,"aa"],[]]]
☗9一香成 [0,[9,1,[1,"ab"],[0,"aj"]],[9,9,[0,"ab"],[]],[1,0,"ab"]]
☖9三桂 [1,[9,3,[],[1,"ac"]],[8,1,[1,"ac"],[0,"aj"]],[9,1,[0,"aj"],[]]]
☗7一成香 [0,[7,1,[1,"ad"],[0,"aj"]],[8,1,[0,"aj"],[]],[1,0,"ad"]]
☖同金 [1,[7,1,[0,"aj"],[]],[6,1,[1,"ae"],[1,"ae"]],[1,1,"ab"]]
{
  "version": "0.0",
  "status": {
    "num": 1
  },
  "ruleid": 18,
  "teban": 0,
  "turn": 0,
  "date": {},
  "moving": null
}
`;

exports[`Gravity shogi > can move 2`] = `
ban:
(1) ab1 
_________1ae1ah1ae1ad1ac1ab
_____________________1ag1af
1ac1aa1aa1aa1aa1aa1aa1aa1aa
________________________1aa
________________________0ab
________________________0aa
___0aa0aa0aa0aa0aa0aa0aa0aa
_____________________0af0ag
___0ac0ad0ae0ah0ae0ad0ac0ab
(0) ad1 
kifu:
☗7六歩 [0,[7,6,[],[]],[7,7,[0,"aa"],[0,"aa"]],[1,6,[],[0,"aa"]],[9,7,[0,"aa"],[]]]
☖3四歩 [1,[3,4,[],[]],[3,3,[1,"aa"],[1,"aa"]],[1,4,[],[1,"aa"]],[9,3,[1,"aa"],[]]]
☗9一香成 [0,[9,1,[1,"ab"],[0,"aj"]],[9,9,[0,"ab"],[]],[1,0,"ab"]]
☖9三桂 [1,[9,3,[],[1,"ac"]],[8,1,[1,"ac"],[0,"aj"]],[9,1,[0,"aj"],[]]]
☗7一成香 [0,[7,1,[1,"ad"],[0,"aj"]],[8,1,[0,"aj"],[]],[1,0,"ad"]]
☖同金 [1,[7,1,[0,"aj"],[]],[6,1,[1,"ae"],[1,"ae"]],[1,1,"ab"]]
☗4五香 [0,[4,5,[],[]],[1,5,[],[0,"ab"]],[-1,0,"ab"]]
{
  "version": "0.0",
  "status": {
    "num": 1
  },
  "ruleid": 18,
  "teban": 1,
  "turn": 0,
  "date": {},
  "moving": null
}
`;
